--- a/index.css
+++ b/index.css
@@ -88,6 +88,7 @@ header .textInput .meo {
     animation-name: move;
     animation-duration: 8s;
     animation-iteration-count: infinite;
+    animation-direction: reverse;
     border-radius: 50%;
     margin-left: 0;
 
@@ -135,4 +136,48 @@ main .mainMain {
     border: 5px solid #ddd;
     border-radius: 20px;
     background-color: white;
+}
+
+.traLoi:hover {
+    scale: 1.1;
+
+}
+
+.traLoi {
+    position: relative;
+    animation-name: moves;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes moves {
+    0% {
+        background-color: red;
+        left: 0px;
+        top: 0px;
+    }
+
+    25% {
+        background-color: yellow;
+        left: 200px;
+        top: 0px;
+    }
+
+    50% {
+        background-color: blue;
+        left: 200px;
+        top: 200px;
+    }
+
+    75% {
+        background-color: green;
+        left: 0px;
+        top: 200px;
+    }
+
+    100% {
+        background-color: red;
+        left: 0px;
+        top: 0px;
+    }
 }
