--- a/post.css
+++ b/post.css
@@ -121,17 +121,13 @@
 }
 
 .reactPost div {
-    margin: 0 15px;
+    margin: 0 auto;
     cursor: pointer;
     transition: all .3 linear;
     padding: 5px 8px;
     background-color: transparent;
     border-radius: 10px;
     width: auto;
-}
-
-.reactPost div i {
-    margin: 0 10px;
 }
 
 .reLike:hover {
