--- a/styles/main.css
+++ b/styles/main.css
@@ -28,7 +28,8 @@ main .sidebar {
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
     width: 100%;
-    padding: 3px;
+    margin: 1px;
+    padding: 5px;
     height: 200px;
     max-height: 100%;
     background-color: red;
