--- a/styles/main.css
+++ b/styles/main.css
@@ -12,7 +12,7 @@ main {
 }
 
 main .sidebar {
-    background-color: white;
+    background-color: #fff;
     border-bottom: 5px solid var(--bg-color);
     border-right: 5px solid var(--bg-color);
     border-radius: 20px;
@@ -156,7 +156,7 @@ main .mainMain {
     border-bottom: 5px solid var(--bg-color);
     border-left: 5px solid var(--bg-color);
     border-radius: 20px;
-    background-color: white;
+    /*background-color: white;*/
 }
 
 /*canvas*/
