--- a/styles/main.css
+++ b/styles/main.css
@@ -5,33 +5,47 @@
 }
 
 main {
-    display: grid;
-    grid-template-columns: 30% 70%;
-    height: 100vh;
-    border-top: 8px solid var(--bg-color);
-}
-
-main .sidebar {
-    background-color: #fff;
-    border-bottom: 5px solid var(--bg-color);
-    border-right: 5px solid var(--bg-color);
-    border-radius: 20px;
-    height: fit-content;
+    width: 900px;
+    max-width: 100%;
+    margin: 0 auto;
 }
 
 /* Sidebar */
-.profile {
-    position: sticky;
+.sidebar .accordion {
+    cursor: pointer;
+    margin: 15px 0;
+    padding: 10px 15px;
+    width: 100%;
+    border: none;
+    border-radius: 20px;
+    outline: none;
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    transition: all ease-in-out;
+}
+
+.active,
+.accordion:hover {
+    background-color: rgba(241, 216, 216, 0.1);
+    transition: all linear;
+}
+
+.panel {
+    padding: 0 18px;
+    display: none;
+    background-color: rgba(241, 216, 216, 0.8);
+    overflow: hidden;
+    border-radius: 20px;
+    transition: 0.3 ease-in-out;
 }
 
 .themesImg {
-    border-top-right-radius: 20px;
-    border-top-left-radius: 20px;
-    width: 100%;
+    border-radius: 50%;
+    width: 100px;
     margin: 1px;
     padding: 5px;
-    height: 200px;
-    max-height: 100%;
+    height: 100px;
     background-color: red;
     object-fit: cover;
     animation: move 8s infinite reverse;
@@ -60,92 +74,51 @@ main .sidebar {
     }
 }
 
-.imgAvatar {
+.proTitle {
     display: flex;
     align-items: center;
-    justify-content: center;
-}
+    margin: 0 15px;
 
-.avt {
-    cursor: pointer;
-    position: absolute;
-    margin: 0 auto;
-    bottom: -15px;
-    height: 80px;
-    width: 80px;
-    object-fit: cover;
-    border-radius: 50%;
-    padding: 1px;
-    background-color: white;
-    animation: move 5s linear infinite reverse;
-}
-
-.avt:hover {
-    scale: 1.1;
 }
 
 .proTitle h5 {
-    flex-direction: column;
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: 'Ephesis', cursive;
     font-size: 20px;
+    margin: 0 10px;
 }
 
 .socialNet {
     padding: 0 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .socialNet a {
-    color: black;
+    margin-right: 20px;
+    font-size: 28px;
 }
 
 .socialNet p {
-    padding: 10px 5px;
+    padding: 15px;
     cursor: pointer;
-    border-radius: 3px;
-    background-color: #eceaea;
+    border-radius: 20px;
     transition: all .3 linear;
 }
 
 .socialNet p:hover {
-    scale: 0.97;
+    scale: 1.2;
+    background-color: rgba(241, 227, 227, 0.521);
 }
 
-.images {
-    padding-bottom: 10px;
-    margin-bottom: 10px;
-    border-bottom: 1px solid #ddd;
-    margin-right: 10px;
-    margin-left: 10px;
-}
-
-.images h4 {
-    padding: 5px 10px;
-    opacity: 0.7;
-
-}
-
-.images .listImg {
-    display: flex;
-    align-items: center;
-    padding: 0 5px;
-}
-
-.listImg .listImgs {
-    border-radius: 20px;
-    height: 180px;
-    padding: 0 2px;
-    width: 100%;
-    object-fit: cover;
+.active,
+.accordion:hover {
     cursor: pointer;
-    transition: all .3 linear;
-}
-
-.listImgs:hover {
-    opacity: 0.8;
-    box-shadow: 2px 2px rgba(0, 140, 186, 0.5);
+    transition: 0.4 linear;
+    background-color: #eceaea;
 }
 
 /* mainMain */
@@ -162,11 +135,9 @@ main .mainMain {
 /*canvas*/
 
 .heartCanvas {
-    flex: 1;
     margin: 0 auto;
     width: 800px;
     max-width: 100%;
-    margin-bottom: 20px;
 }
 
 canvas {
@@ -190,14 +161,60 @@ canvas {
 
 /* moment */
 
-.moment {
-    margin-bottom: 10px;
-}
-
-.moment h4 {
+.moment button {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 25px;
-    background-color: #ddd;
+    outline: none;
+    border: none;
+    padding: 8px 0;
+    font-weight: bolder;
+    cursor: pointer;
+    width: 50%;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    background-color: rgba(115, 234, 255, 0.8);
+}
+
+.moment button:hover {
+    scale: 1.1;
+}
+
+.images {
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+.images h4 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px 10px;
+    opacity: 0.7;
+    font-size: 20px;
+    font-family: 'Ephesis', cursive;
+}
+
+.images .listImg {
+    display: flex;
+    align-items: center;
+    padding: 0 5px;
+}
+
+.listImg .listImgs {
+    border-radius: 20px;
+    height: 450px;
+    margin: 0 20px;
+    width: 100%;
+    object-fit: cover;
+    cursor: pointer;
+}
+
+.listImgs:hover {
+    opacity: 0.8;
+    box-shadow: 2px 2px rgba(0, 140, 186, 1);
 }
